--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 25
     defaultConfig {
         applicationId "com.cs5248.team07.dashvideostreaming"
         minSdkVersion 24
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -17,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '26.0.2'
 }
 
 dependencies {
@@ -24,10 +24,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.+'
-    compile 'com.android.support:design:24.+'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v13:24.0.0-alpha1'
-    compile 'com.android.support:support-v4:24.0.0-alpha1'
+    implementation 'com.android.support:support-v4:25.4.0'
+    implementation 'com.android.support:support-v13:25.4.0'
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support:design:25.4.0'
+    implementation files('/Users/ranga/Downloads/AndroidDASHRecorder-master/libs/aspectjrt-1.8.2.jar')
+    implementation files('/Users/ranga/Downloads/AndroidDASHRecorder-master/libs/httpclientandroidlib-1.2.1.jar')
+    implementation files('/Users/ranga/Downloads/AndroidDASHRecorder-master/libs/isoparser-1.0.3.17.jar')
 }
